--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body {
 }
 
 p {
-    font-size: 18px;
+    font-size: 25px;
     margin: 0;
 }
 
@@ -23,7 +23,8 @@ p {
     justify-content: center;
     align-items: center;
     margin-bottom: 25px;
-    font-size: 30px;
+    font-size: 25px;
+    text-decoration: underline;
 }
 
 .main {
