--- a/src/modules/accounts/AccountDie/AccountDie.css
+++ b/src/modules/accounts/AccountDie/AccountDie.css
@@ -1,12 +1,14 @@
 .content_block_author {
     display: flex;
+    align-items: center;
     height: 70px;
+    padding-bottom: 10px;
 }
 
 .content_block_author img {
     width: 50px;
     height: 50px;
-    border-radius: 10px;
+    border-radius: 15px;
     filter: grayscale(0.5);
     margin-right: 10px;
     cursor: pointer;
@@ -20,6 +22,7 @@
 
 .content_block_author_name b {
     width: 100%;
+    font-size: 20px;
     cursor: pointer;
 }
 
@@ -29,6 +32,7 @@
 
 .content_block_author_name p {
     cursor: pointer;
+    font-size: 20px;
 }
 
 .content_block_author_name p:hover {
