--- a/src/modules/posts/ContentBlock.css
+++ b/src/modules/posts/ContentBlock.css
@@ -1,7 +1,7 @@
 .content {
     display: grid;
     width: 95svw;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 22.3vw);
     padding: 0 0px 0 5.7%;
 }
 
@@ -10,10 +10,10 @@
     flex-direction: column;
     justify-content: space-between;
     width: 96%;
-    padding: 0 40px 0 0;
+    height: 550px;
+    padding: 0 40px 0 15px;
     gap: 20px;
     border: thin solid rgb(216, 212, 202);
-    padding: 0 10px;
     margin: 5px;
     margin-bottom: 12px;
 }
@@ -36,4 +36,56 @@
 
 .content_lastElem p {
     font-size: 24px;
+}
+
+@media screen and (max-width: 1820px) {
+    .content {
+        grid-template-columns: 45vw 45vw;
+    }
+    
+    .content_block {
+        height: 400px;
+        padding: 20px 20px 10px;
+        margin: 13px 13px 13px;
+    }
+}
+
+@media screen and (max-width: 1440px) {
+    .content_block {
+        height: 420px;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .content_block {
+        height: 550px;
+    }
+}
+
+@media screen and (max-width: 1010px) {
+    .content {
+        grid-template-columns: 100%;
+    }
+    
+    .content_block {
+        height: 400px;
+    }
+}
+
+@media screen and (max-width: 725px) {  
+    .content_block {
+        height: 450px;
+    }
+}
+
+@media screen and (max-width: 650px) {  
+    .content_block {
+        height: 520px;
+    }
+}
+
+@media screen and (max-width: 510px) {  
+    .content_block {
+        height: 700px;
+    }
 }
