--- a/src/pages/Account/PageAccount.css
+++ b/src/pages/Account/PageAccount.css
@@ -79,6 +79,37 @@ h3 {
     gap: 10px;
 }
 
+.account_info_numberOfPosts {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 3;
+    border: thin solid rgb(216, 212, 202);
+    border-radius: 20px;
+    padding: 68px;
+    box-shadow: 0px 0px 15px 2px rgb(0, 0, 0, 0.1);
+    gap: 10px;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.account_info_numberOfPosts:hover {
+    color: #f8f3eb;
+    background-color: black;
+}
+
+.account_info_numberOfPosts:hover h3 {
+    color: #f8f3eb;
+}
+
+.account_info_numberOfPosts h3 {
+    font-size: 24px;
+    transition: 0.5s;
+}
+
 @media screen and (max-width: 1100px) {
     .account {
         display: flex;
